tests/snapshots/gql_snapshots__parse_case_no_else_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
let_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Case:
          when_clauses:
            - - BinaryOp:
                  left:
                    Property:
                      variable: p
                      property: mvp_count
                  op: Gt
                  right:
                    Literal:
                      Int: 0
              - Literal:
                  String: MVP Winner
          else_clause: ~
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
