tests/snapshots/gql_snapshots__parse_case_with_comparison_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause:
  expression:
    Case:
      when_clauses:
        - - BinaryOp:
              left:
                Property:
                  variable: p
                  property: position
              op: Eq
              right:
                Literal:
                  String: Center
          - BinaryOp:
              left:
                Property:
                  variable: p
                  property: height
              op: Gt
              right:
                Literal:
                  Int: 84
      else_clause:
        Literal:
          Bool: true
let_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: p
          property: name
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
