tests/snapshots/gql_snapshots__parse_coalesce_multiple_args_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        FunctionCall:
          name: coalesce
          args:
            - Property:
                variable: p
                property: nickname
            - Property:
                variable: p
                property: alias
            - Property:
                variable: p
                property: name
            - Literal:
                String: Unknown
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
