tests/snapshots/gql_snapshots__parse_count_star_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Aggregate:
          func: Count
          distinct: false
          expr:
            Variable: "*"
      alias: ~
order_clause: ~
limit_clause: ~
